grammar-actual.txt
Names: Chloe Calvarin and Matt Cook
CS111 - Domain-Specific Languages
External Piconot - Priority Bot 2.0

Actual EBNF

picobot = mazeSpec, '\n', rules;

mazeSpec = 'maze = "', ?name of maze file, a txt file?, '"';

rules = EOF | rule, rules;

rule = cardinalDirection, whitespace, '->', whitespace, relativeDirections, '\n';

relativeDirections = relativeDirection, {whitepace, relativeDirection};

cardinalDirection = N | E | W | S | *;

relativeDirection = F | B | L | R;

opt whitespace = {' ', '\t'};

whitespace = [' ', '\t'], opt whitespace;
